cmake_minimum_required(VERSION 2.8)
set(HAVE_BOOST_THREADING off)
project(ImgFeature)
find_package(OpenCV REQUIRED)
find_package(Boost COMPONENTS thread REQUIRED)
add_executable(f feature.cpp)
add_library(kazefeatures ../kaze_opencv/KAZE/kaze_features.cpp)
add_library(kazeconfig ../kaze_opencv/KAZE/kaze_config.cpp)
add_library(kaze ../kaze_opencv/KAZE/kaze.cpp)
add_library(kazeipoint ../kaze_opencv/KAZE/kaze_ipoint.cpp)
add_library(kazenl ../kaze_opencv/KAZE/kaze_nldiffusion_functions.cpp)
add_library(kazeutils ../kaze_opencv/KAZE/kaze_utils.cpp)
include_directories ("../kaze_opencv/KAZE")
include_directories(${Boost_INCLUDE_DIRS})
target_link_libraries(f ${OpenCV_LIBS} kazefeatures kazeconfig)
target_link_libraries(kazefeatures kazeconfig kaze)
target_link_libraries(kaze kazeipoint kazenl kazeutils ${Boost_LIBRARIES})
